=========== 4.6.0
 * Added support for torque version 5.x. Note: the rm interface does not work for me on debian wheezy.
   Author: Bas van der Vlies

=========== 4.5.0
 * new_rack_pbsmon.py: Added option -j/--joby. It will show the nodes that are used by the specified job
 Author: Dennis Stam

 * JobscriptParser.py: Added a new usefull script which parses the jobscript and returns the attropl as datastructure
 Author: Dennis Stam
  

=========== 4.4.1
 * new_rack_pbsmon.py: Added option -p/--property to filter on torque node properties. It will show
   the nodes that meet the property request with a capital M on a non-color terminal and in green on
   color terminals.
 Requested by: Willem Vermin and Wim Rijks
 Author: Dennis Stam

 * Fixed docdir bug in configure.in and Makefile.in, closes #39
 Author: Dennis Stam

=========== 4.4.0
 * Drop support for versions older then 2.4
 Author: Bas van der Vlies

 * Added support for torque version >= 4.2
 Author: Bas van der Vlies

 * rewrote setup.py.in
 Inspired by: stijn dot deweirdt at ugent dot be
 Author: Bas van der Vlies

 * docdir is now configurable, closes #37
 Author: jens dot timmerman add ugent dot be
 Applied by: Bas van der Vlies

 * The swig development environment to generate the pbs_python package
   is now available at:
    - svn co https://oss.trac.surfsara.nl/pbs_python/svn/devel

=========== 4.3.7
 * pbs_jobmonitor/pbs_joblogin ported to torque 2.5 to fix jobarrays
  Author: Willem Vermin (SURFsara)
  Applied by: Bas van der Vlies
  
=========== 4.3.6
 * Modified sara_nodes.py and new_rack_pbsmon.py so:
   - We using argparse instead of OptionParser
   - Changed the print statement to an print function which will work with Python 2.5+
   - Removed module PBSAdvancedParser.py
   Author: Dennis Stam

=========== 4.3.5
 * PBSQuery bugfix, parsing of node status line with multiple EVENT: settings
   was wrong
   Author: Bas van der Vlies

 * Added an example how to make use of the EVENT status message: