@@ -1,6 +1,6 @@
 pbs-python (4.6.0-1) UNRELEASED; urgency=low
 
-  * Added support torque 5.X
+  * See Changes
 
  -- Bas van der Vlies <bas.vandervlies@surfsara.nl>  Tue, 10 Mar 2015 12:03:25 +0100
 
